wrote test cases for season, series and episode. Still working on them